[gd_scene load_steps=40 format=3 uid="uid://c7gvf6d2ofd3d"]

[ext_resource type="Script" uid="uid://djxs0565osbkq" path="res://scripts/enemies/boom_slime.gd" id="1_eo3gx"]
[ext_resource type="Texture2D" uid="uid://6fe2cx8btcng" path="res://assets/sprites/enemies/boom_slime/boom-slime-idle.png" id="1_oggdf"]
[ext_resource type="Texture2D" uid="uid://b0c4p7qgu22yt" path="res://assets/sprites/enemies/slime/slime-fall.png" id="2_aolva"]
[ext_resource type="PackedScene" uid="uid://bg7nrwxlpxf3p" path="res://scenes/core/base_damage_zone.tscn" id="2_b7oqg"]
[ext_resource type="Script" uid="uid://bcoqv8smpfvig" path="res://scripts/states/state_machines/state_machine.gd" id="3_c5vq7"]
[ext_resource type="Script" uid="uid://djggnrm5rxac8" path="res://scripts/behavior_tree/behaviortree.gd" id="4_10l0i"]
[ext_resource type="Texture2D" uid="uid://cmiijc04jyy37" path="res://assets/sprites/enemies/slime/slime-patrol.png" id="4_dj48x"]
[ext_resource type="Script" uid="uid://ct14p13yajhmc" path="res://scripts/states/generic_states/idle_state.gd" id="4_eo3gx"]
[ext_resource type="Script" uid="uid://boluvm00k7dyt" path="res://scripts/behavior_tree/blackboard.gd" id="4_l43vb"]
[ext_resource type="Script" uid="uid://bj4a373s7ooyk" path="res://scripts/behavior_tree/bt_selector.gd" id="5_l43vb"]
[ext_resource type="Script" uid="uid://dl4e74spycbcb" path="res://scripts/states/generic_states/move_state.gd" id="5_pyuen"]
[ext_resource type="Script" uid="uid://dye5xmtdk3w5l" path="res://scripts/behavior_tree/bt_sequence.gd" id="6_8vynx"]
[ext_resource type="Script" uid="uid://ccjqnofia5vo0" path="res://scripts/states/generic_states/jump_state.gd" id="6_r8tp6"]
[ext_resource type="Script" uid="uid://c00v8xtua7qdr" path="res://scripts/behavior_tree/bt_condition.gd" id="7_aolva"]
[ext_resource type="Script" uid="uid://njtfdxwshymo" path="res://scripts/behavior_tree/bt_action.gd" id="8_dj48x"]
[ext_resource type="Script" uid="uid://clv1jjvxgs12w" path="res://scripts/states/generic_states/fall_state.gd" id="8_eo3gx"]
[ext_resource type="Script" uid="uid://dvj15x0yx6poy" path="res://scripts/components/ground_check_component.gd" id="17_dj48x"]
[ext_resource type="Script" uid="uid://c5ae5naepgxn2" path="res://scripts/components/gravity_component.gd" id="18_2cunx"]
[ext_resource type="Script" uid="uid://d2ncc58simucl" path="res://scripts/components/direction_flip_component.gd" id="19_vqnqe"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2cunx"]
atlas = ExtResource("2_aolva")
region = Rect2(0, 0, 32, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_vqnqe"]
atlas = ExtResource("2_aolva")
region = Rect2(32, 0, 32, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_seh1n"]
atlas = ExtResource("2_aolva")
region = Rect2(64, 0, 32, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_mlhg4"]
atlas = ExtResource("2_aolva")
region = Rect2(96, 0, 32, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_tm751"]
atlas = ExtResource("1_oggdf")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_21lfa"]
atlas = ExtResource("1_oggdf")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7e87r"]
atlas = ExtResource("1_oggdf")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c5vq7"]
atlas = ExtResource("1_oggdf")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_asjr7"]
atlas = ExtResource("4_dj48x")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xcak5"]
atlas = ExtResource("4_dj48x")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6dx5s"]
atlas = ExtResource("4_dj48x")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gym6j"]
atlas = ExtResource("4_dj48x")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjkka"]
atlas = ExtResource("4_dj48x")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_go4ac"]
atlas = ExtResource("4_dj48x")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_if55m"]
atlas = ExtResource("4_dj48x")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fi4r0"]
atlas = ExtResource("4_dj48x")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y3vq5"]
atlas = ExtResource("4_dj48x")
region = Rect2(256, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_eo3gx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2cunx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vqnqe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_seh1n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mlhg4")
}],
"loop": true,
"name": &"slime_fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tm751")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_21lfa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7e87r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c5vq7")
}],
"loop": true,
"name": &"slime_idle",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_asjr7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xcak5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6dx5s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gym6j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjkka")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_go4ac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_if55m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fi4r0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y3vq5")
}],
"loop": true,
"name": &"slime_patrol",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pyuen"]
size = Vector2(22, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r8tp6"]
size = Vector2(29.7674, 14)

[node name="BoomSlime" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 11
script = ExtResource("1_eo3gx")

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(7, -5)
target_position = Vector2(2, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(-7, -5)
target_position = Vector2(-2, 0)

[node name="Animations" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -11)
scale = Vector2(0.671875, 0.671875)
sprite_frames = SubResource("SpriteFrames_eo3gx")
animation = &"slime_idle"
autoplay = "slime_idle"

[node name="EnemyDamageZone" parent="." instance=ExtResource("2_b7oqg")]
position = Vector2(4.76837e-07, 7.66406)
scale = Vector2(0.671875, 0.671875)
script = null

[node name="AttackCollision" type="CollisionShape2D" parent="EnemyDamageZone"]
position = Vector2(-7.09711e-07, -20.3372)
shape = SubResource("RectangleShape2D_pyuen")

[node name="SlimeCollision" type="CollisionShape2D" parent="."]
position = Vector2(2.98023e-07, -4.67187)
scale = Vector2(0.671875, 0.671875)
shape = SubResource("RectangleShape2D_r8tp6")

[node name="EnemyAI" type="Node" parent="."]

[node name="BehaviorTree" type="Node" parent="EnemyAI"]
script = ExtResource("4_10l0i")
blackboard_node_path = NodePath("../BlackBoard")
actor_node_path = NodePath("../..")

[node name="BTSelector(Mobility)" type="Node" parent="EnemyAI/BehaviorTree"]
script = ExtResource("5_l43vb")

[node name="BTSequence(Fall)" type="Node" parent="EnemyAI/BehaviorTree/BTSelector(Mobility)"]
script = ExtResource("6_8vynx")

[node name="BTCondition(IfNotGrounded)" type="Node" parent="EnemyAI/BehaviorTree/BTSelector(Mobility)/BTSequence(Fall)"]
script = ExtResource("7_aolva")
condition_key = "is_grounded"
expected_value = false

[node name="BTAction(ChangeToFall)" type="Node" parent="EnemyAI/BehaviorTree/BTSelector(Mobility)/BTSequence(Fall)" node_paths=PackedStringArray("target_state_node")]
script = ExtResource("8_dj48x")
target_state_node = NodePath("../../../../StateMachine/FallState")

[node name="BTSequence(Patrol)" type="Node" parent="EnemyAI/BehaviorTree/BTSelector(Mobility)"]
script = ExtResource("6_8vynx")

[node name="BTCondition(IfCanPatrol)" type="Node" parent="EnemyAI/BehaviorTree/BTSelector(Mobility)/BTSequence(Patrol)"]
script = ExtResource("7_aolva")
condition_key = "can_patrol"
expected_value = false

[node name="BTAction(ChangeToPatrol)" type="Node" parent="EnemyAI/BehaviorTree/BTSelector(Mobility)/BTSequence(Patrol)" node_paths=PackedStringArray("target_state_node")]
script = ExtResource("8_dj48x")
target_state_node = NodePath("../../../../StateMachine/PatrolState")

[node name="BTSequence(Idle)" type="Node" parent="EnemyAI/BehaviorTree/BTSelector(Mobility)"]
script = ExtResource("6_8vynx")

[node name="BTCondition(IfCanIdle)" type="Node" parent="EnemyAI/BehaviorTree/BTSelector(Mobility)/BTSequence(Idle)"]
script = ExtResource("7_aolva")
condition_key = "can_idle"
expected_value = false

[node name="BTAction(ChangeToIdle)" type="Node" parent="EnemyAI/BehaviorTree/BTSelector(Mobility)/BTSequence(Idle)" node_paths=PackedStringArray("target_state_node")]
script = ExtResource("8_dj48x")
target_state_node = NodePath("../../../../StateMachine/IdleState")

[node name="BlackBoard" type="Node" parent="EnemyAI"]
script = ExtResource("4_l43vb")

[node name="StateMachine" type="Node" parent="EnemyAI" node_paths=PackedStringArray("starting_state")]
script = ExtResource("3_c5vq7")
starting_state = NodePath("IdleState")

[node name="IdleState" type="Node" parent="EnemyAI/StateMachine" node_paths=PackedStringArray("next_state", "fall_state")]
script = ExtResource("4_eo3gx")
idle_animation = "slime_idle"
next_state = NodePath(".")
fall_state = NodePath("../FallState")
use_idle_timer = true

[node name="PatrolState" type="Node" parent="EnemyAI/StateMachine" node_paths=PackedStringArray("fall_state", "idle_state")]
script = ExtResource("5_pyuen")
move_animation = "slime_patrol"
move_speed = 40.0
use_direction_flip = true
fall_state = NodePath("../FallState")
idle_state = NodePath("../IdleState")
use_idle_timer = true
raycast_right_path = NodePath("../../../RayCastRight")
raycast_left_path = NodePath("../../../RayCastLeft")

[node name="JumpState" type="Node" parent="EnemyAI/StateMachine" node_paths=PackedStringArray("next_state", "fall_state")]
script = ExtResource("6_r8tp6")
use_internal_logic = false
jump_animation = "slime_idle"
next_state = NodePath("../IdleState")
fall_state = NodePath("../FallState")

[node name="FallState" type="Node" parent="EnemyAI/StateMachine"]
script = ExtResource("8_eo3gx")
fall_animation = "slime_fall"

[node name="Components" type="Node" parent="EnemyAI"]

[node name="HealthComponent" type="Node" parent="EnemyAI/Components"]

[node name="GroundCheckComponent" type="Node" parent="EnemyAI/Components"]
script = ExtResource("17_dj48x")
actor_path = NodePath("../../..")
blackboard_path = NodePath("../../BlackBoard")

[node name="GravityComponent" type="Node" parent="EnemyAI/Components"]
script = ExtResource("18_2cunx")
actor_path = NodePath("../../..")
blackboard_path = NodePath("../../BlackBoard")

[node name="DirectionFlipComponent" type="Node" parent="EnemyAI/Components"]
script = ExtResource("19_vqnqe")
actor_path = NodePath("../../..")
animations_path = NodePath("../../../Animations")
